Fix outline focus ring overlapping other controls

--- a/css/user-home-screen.css
+++ b/css/user-home-screen.css
@@ -130,6 +130,11 @@
 	background-color: #e2e2e2;
 }
 
+.uhs-toggle-widget-info:focus,
+.uhs-remove-widget:focus {
+	outline-offset: -2px;
+}
+
 .uhs-remove-widget {
 	position: absolute;
 	right: 10px;
